# dany

./: Lolo_structured_2_voronoi_workshop.ipynb  README.md  Sagehen_structured_2_voronoi_workshop.ipynb  Sagehen_structured_2_voronoi_workshop.py  calibrate_sagehen_voronoi.py  dem_conditioning.py  develop_sink_fill_method.py  development.py  flow_directions.py  lolo_basin.py  pyproject.toml  sagehen_unstructured.py  setup.py  stream_util.py
.docs/: code.rst  conf.py  introduction.rst  main.rst
.github/workflows/: ci.yml
autotest/: test_conditioning.py  test_flow_directions.py  test_stream_generation.py
dany/: __init__.py  author.py  dem_conditioning.py  flow_directions.py  stream_util.py  version.py
data/: dem100.txt  dem50.txt
data/Lolo_Voronoi_Grid/: LoloCr_voronoiGrid.dbf  LoloCr_voronoiGrid.shp.xml  LoloCr_voronoiGrid.shx  Lolo_10mDEM_Watershed_Boundary_UTM.dbf  Lolo_10mDEM_Watershed_Boundary_UTM.sbn  Lolo_10mDEM_Watershed_Boundary_UTM.sbx  Lolo_10mDEM_Watershed_Boundary_UTM.shp  Lolo_10mDEM_Watershed_Boundary_UTM.shp.xml  Lolo_10mDEM_Watershed_Boundary_UTM.shx  Lolo_Streams_UTM.dbf  Lolo_Streams_UTM.sbn  Lolo_Streams_UTM.sbx  Lolo_Streams_UTM.shp  Lolo_Streams_UTM.shp.xml  Lolo_Streams_UTM.shx  USGS_13_lolo_utm_dem_ascii.csv
data/dem_conditioning/: complete_conditioned_array.txt  eps_conditioned_array.txt  fd_fill_conditioned_array.txt  sink_array.txt
data/freyberg_synthetic/: aspect.txt  connection_data.txt  filled_flow_dirs.txt  flow_accumulation_area.txt  flow_accumulation_as_cells.txt  freyberg_multi-streams_synthetic.txt  hru_down_id.txt  hru_len.txt  hru_pct_id.txt  hru_strmseg_dn_id.txt  hru_up_id.txt  idomain.txt  package_data.npy  package_data.txt  reach_data.npy  reach_data.txt  segment_data.npy  segment_data.txt  slope.txt  subbasins.txt  vector_u_file.txt  vector_v_file.txt  watershed_boundary.txt
data/geospatial/: dem.img.xml  nlcd2011_imp_utm.img.xml  us_140evc_utm.img.xml  us_140evt_utm.img.xml
development/: Lolo_structured_2_voronoi_workshop.ipynb  Sagehen_structured_2_voronoi_workshop.ipynb  calibrate_sagehen_voronoi.py  development.py  lolo_basin.py  sagehen_unstructured.py
etc/: environment.yml
examples/: Complex_meshes_from_existing_boundary.ipynb  Generating_stream_networks.ipynb  Hydrologic_conditioning.ipynb  Structured_and_quadtree_meshes_from_existing_raster.ipynb  build_structured_sagehen_model.ipynb  build_voronoi_sagehen_model.ipynb  nse_util.py
(+38 files in other folders)
